//------------------------------------------------------------------------------
// {C} Copyright 2019 Pensando Systems Inc. All rights reserved
// protobuf specification for Static Route Configuration
//------------------------------------------------------------------------------

syntax = "proto3";
package pds;

import "pdsa.proto";
import "meta/meta.proto";
import "types.proto";
import  "common.proto";

service StaticRouteSvc
{
  rpc StaticRouteSpecCreate (StaticRouteRequest) returns (StaticRouteResponse) {}
  rpc StaticRouteSpecUpdate(StaticRouteRequest) returns (StaticRouteResponse) {}
  rpc StaticRouteSpecDelete (StaticRouteRequest) returns (StaticRouteResponse) {}
}

enum StRtAction {
  STRT_ACTION_NONE    = 0;
  STRT_ACTION_LOCAL   = 1;
  STRT_ACTION_FWD     = 2;
  STRT_ACTION_REJECT  = 3;
  STRT_ACTION_DISCARD = 4;
}

message StaticRouteSpec {
  option (venice.pdsaSetGlobOpts) = {
    OidLen: "AMB_QCR_STRT_OID_LEN",
    Mib:    "rtmStaticRtTable"
    FillFn: "rtm_strt_fill_func" // EntityIndex, IfIndex
  };

  // Destination Address 
  types.IPAddress DestAddr      = 1 [(venice.pdsaFields) = {Field: "dest_addr"}, (gogoproto.moretags) = "meta:mandatory"];
  // Destination Address Prefix Length
  uint32          PrefixLen     = 2 [(venice.pdsaFields) = {Field: "dest_len", SetKeyOidIndex: "AMB_QCR_STRT_DEST_LEN_INDEX"}, (gogoproto.moretags) = "meta:mandatory"];
  // NextHop Address
  types.IPAddress NextHopAddr   = 3 [(venice.pdsaFields) = {Field: "next_hop"}, (gogoproto.moretags) = "meta:mandatory"];
  // Admin Status
  AdminSt         AdminStatus  = 4 [(venice.pdsaFields) = {Field: "admin_stat"}, (gogoproto.moretags) = "meta:mandatory"];
  // Override Admin Distance
  AMBBool         Override      = 5 [(venice.pdsaFields) = {Field: "override"}, (gogoproto.moretags) = "meta:default=BOOL_FALSE"];
  // Admin Distance
  uint32          AdminDist     = 6 [(venice.pdsaFields) = {Field: "admin_dist"}, (gogoproto.moretags) = "range:0-255"];
  // Route Action 
  StRtAction      Action        = 7  [(venice.pdsaFields) = {Field: "action"}, (gogoproto.moretags) = "meta:default=STRT_ACTION_FWD"];
}

// CRUD request message
message StaticRouteRequest {
  option (venice.pdsaSetGlobOpts) = {
    Mib:    "rtmStaticRtTable"
  };

  repeated StaticRouteSpec request = 1;
}

// response message
message StaticRouteResponse {
  types.ApiStatus       ApiStatus = 1;
}
